[project]
name = "predictionmarket"
version = "0.1.0"
description = "Multi-agent LLM debate system over Polymarket questions, with an eval harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "polymarket-client>=0.1.0b19",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
